# zdrovena-reconciliation

./: .dockerignore  .env.local.template  .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml.example  .trivyignore  .venv  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  TODOS.md  addrress.txt  bootstrap_spec_driven.sh  coverage.json  dev.sh  docker-compose.yml  enable_venv.sh  invitations.csv  poc_browser_batch.py  pyproject.toml  qse.json  qse_baseline_t0.json  stop.sh  trivy.yaml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  path-filters.yml
.github/agents/: my-agent.agent.md  zdrovena-implementation.agent.md
.github/workflows/: _deploy.yml  _full-test-suite.yml  _quality-gate.yml  _staging-smoke.yml  back-sync-main.yml  ci-cd.yml  ci.yml  dependabot-auto-merge.yml  deploy.yml  develop-gate.yml  frontend.yml  mutation.yml  pipeline-analyzers.yml  pipeline-full.yml  pipeline-qse.yml  pr-validate.yml  prod-deploy.yml  prod-health.yml  release-validation.yml  rollback.yml  staging-schedule.yml  terraform.yml
ai/model/lfm/: Modelfile
ai/model/qwen-32k/: Modelfile
contracts/: openapi.json
docs/: AGENTS.md  PLAN.md  RUNBOOK.md  SPEC.md  ZDROVENA_IMPLEMENTATION_PLAN_V2.md  additional_validation_impl.md  code-review-2026-05-15.md  fakturownia_settlement_positions.md
docs/ADR/: 0001-module-boundaries.md  0002-month-closing-audit-flow.md
docs/audit/: 00-summary.md  01-allegro.md  02-fakturownia.md  03-shopify.md  04-inpost.md  05-apaczka.md  06-cross-cutting.md  production-readiness.md
docs/audit/fixtures/: allegro_create_commands_request.json  allegro_get_invoices.json  allegro_post_shipment_request.json
docs/devops/: branch-workflow.md  monitoring-runbook.md  sops-age.md
docs/implementation/: README.md
docs/implementation/issues/: 01-r4a-smoke-strict.md  02-r4b-observability-auth.md  03-r4c-monitoring.md  04-r4-1-invoice-502.md  05-r4-2-deposit.md  06-r4-3-preview-parity.md  07-r5a-shipping-state-machine.md  08-r5b-labels.md  09-r6-test-foundation.md
docs/superpowers/plans/: 2026-07-03-allegro-invoice-creation.md  (+2 more)
docs/working/: sandbox-setup-code-refactor.md  shipping-view-ux-improvements.md  shopify-inpost-apaczka-spec.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: api-connectivity.spec.ts  app-loads.spec.ts  auth-config.spec.ts  close-flow.spec.ts  critical-fake-providers.spec.ts
frontend/: .env.example  DESIGN_CRITIQUE.md  eslint.config.js  index.html  package-lock.json  package.json  staticwebapp.config.json  tsconfig.api-contracts.json  vite.config.js
frontend/public/: staticwebapp.config.json
frontend/src/: App.jsx  api.js  api.test.js  auth.jsx  data.js  features.js  lang.js  main.jsx
infra/terraform/: MONITORING_RUNBOOK.md  backend.hcl  compute.tf  frontend.tf  main.tf  monitoring.tf  network.tf  outputs.tf  policy.tf  providers.tf  security.tf  storage.tf  terraform.tfvars.template  tfplan  variables.tf
scripts/: .env.smoke.example  aggregate_quality.py  analyzers_gate.py  azurite-healthcheck.js  bootstrap_azure.sh  check-api-contracts.sh  check-sops-secrets.sh  check.sh  create-github-issues.sh  ensure-storage-container.py  export-openapi.py  generate-api-contracts.sh  install-hooks.sh  sanitize_fixtures.py  secrets_manifest.py  secrets_sync.py  seed-local-storage.py  seed-shipping-drafts.py  seed-via-webhook.py  smoke-local.sh  sops-age-bootstrap.sh  validate-staging-ci.sh
scripts/ci/: azure-cli-retry.sh  deploy-fake-providers.sh  link-swa-backend.sh  promote-image.sh  seed-staging.sh  smoke-test.sh  teardown-staging.sh  wait-containerapp.sh
scripts/smoke/: package-lock.json  package.json  runner.ts  strict.ts  types.ts
tests/: conftest.py  test_allegro_client.py  test_allegro_confirm_endpoint.py  test_allegro_contract.py  test_allegro_create_shipment.py  test_allegro_delivery_execute.py  test_allegro_execute_integration.py  test_allegro_invoice_mapper.py  test_allegro_invoicer.py  test_allegro_mapper.py  test_allegro_poll_cmd.py  test_allegro_poller.py  test_allegro_ship_with_allegro.py  test_allegro_token_store.py  test_apaczka_client.py  test_api.py  test_api_cli_parity.py  test_api_contract.py  test_api_errors.py  test_appenv.py  test_bottles.py  test_calc_packages_locker_assert.py  test_ci_azure_retry.py  test_ci_staging_policy.py  test_cli.py  test_cli_api_client.py  test_cli_contract.py  test_cli_smoke.py  test_client.py  test_close_cmd.py  test_close_history.py  test_close_property.py  test_close_run_store.py  test_common_bottles.py  test_console.py  test_courier_picking.py  test_damage_detection.py  test_damage_endpoints.py  test_damage_provider_contracts.py  test_damage_store.py  (+45 more)
tests/fitness/: __init__.py  test_module_boundaries.py
tests/fixtures/: shopify_order_apaczka.json  shopify_order_dpd_pickup.json  shopify_order_inpost_kurier.json  shopify_order_inpost_paczkomat.json  shopify_order_real.json
zdrovena/: __init__.py  cli.py
zdrovena/api/: auth.py  client.py  damage_detection.py  deps.py  errors.py  main.py  models.py  observability.py
zdrovena/audit/: __init__.py  api.py  bottles.py  report_downloader.py  sections.py
zdrovena/common/: __init__.py  _keyvault.py  _local_secret_fallback.py  allegro.py  allegro_invoice_mapper.py  allegro_mapper.py  apaczka.py  appenv.py  bottles.py  client.py  config.py  correlation.py  damage_store.py  events.py  exceptions.py  fakturownia.py  formatting.py  inpost.py  kaucja.py  provider_safety.py  retry.py  secrets.py  shipping_exceptions.py  shipping_format.py  shipping_state.py  shipping_store.py  shopify_dedup_store.py  sms_service.py  storage.py  telemetry.py
zdrovena/fake_providers/: __init__.py  app.py
zdrovena/month_closing/: __init__.py  canva_downloader.py  close_history.py  config.py  console.py  download_watcher.py  email_service.py  fakturownia_reports.py  google_ads.py  invoice_date_check.py  ksef.py  orchestrator.py  preflight.py  run_store.py  state.py  table_history.py  workflow.py  zip_service.py  zoho_mail.py
zdrovena/pipeline/: __init__.py
(+95 files in other folders)
