[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zdrovena-reconciliation"
version = "2.0.0"
description = "Unified CLI for Fakturownia invoice audit, bottle tracking & month-close (Zdrovena/Humio)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "keyring>=25.0.0",
    "python-dotenv>=1.0.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
ksef = ["cryptography>=42.0.0", "signxml>=4.0.0", "lxml>=5.0.0"]
pdf = ["pypdf>=4.0.0", "pdf2image>=1.17.0"]
report = ["playwright>=1.40.0"]
all = ["zdrovena-reconciliation[ksef,pdf,report]"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "responses>=0.25.0"]

[project.scripts]
zdrovena = "zdrovena.cli:main"

[tool.setuptools.packages.find]
include = ["zdrovena*"]

# ─── Type checking (Pyright / Pylance) ────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

# ─── Linting & formatting (Ruff) ─────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator suggestions
]

[tool.ruff.lint.isort]
known-first-party = ["zdrovena"]

# ─── Testing (pytest) ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
