[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zdrovena-reconciliation"
version = "2.7.3"
description = "Unified CLI for Fakturownia invoice audit, bottle tracking & month-close (Zdrovena/Humio)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "keyring>=25.3.0",
    "python-dotenv>=1.0.1",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
ksef = ["cryptography>=48.0.1", "signxml>=4.0.0", "lxml>=6.1.0"]
pdf = ["pypdf>=4.0.0", "pdf2image>=1.17.0"]
report = ["playwright>=1.40.0", "playwright-stealth>=2.0.0"]
api = ["fastapi>=0.125.0", "uvicorn[standard]>=0.29.0", "PyJWT[crypto]>=2.8.0", "pypdf>=4.0.0"]
cloud = [
    "azure-storage-blob>=12.24.0",
    "azure-identity>=1.18.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-data-tables>=12.7.0",
    "azure-monitor-opentelemetry>=1.2.0",
]
all = ["zdrovena-reconciliation[ksef,pdf,report]"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "responses>=0.25.0", "httpx>=0.27.0", "pip-audit>=2.7.0", "bandit[toml]>=1.7.0", "hypothesis>=6.100.0", "ruff>=0.4.0"]
# Separate from `dev`: CI's pip-audit/bandit job installs `dev` but never runs
# checkov (the Terraform job uses the containerized bridgecrewio/checkov-action
# instead). Keeping checkov out of `dev` keeps its transitive ecdsa dependency
# (unfixable Minerva timing-attack CVE, PYSEC-2026-1325) out of a job that
# never invokes checkov at all. Local pre-push IaC scan (scripts/check.sh)
# installs this extra directly when wanted.
iac = ["checkov>=3.0.0"]

[project.scripts]
zdrovena = "zdrovena.cli:main"

[tool.setuptools.packages.find]
include = ["zdrovena*"]

# ─── Type checking (Pyright / Pylance) ────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = ["tests/"]

# ─── Linting & formatting (Ruff) ─────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator suggestions
    "RUF001", # ambiguous unicode in strings — intentional Polish text
    "RUF002", # ambiguous unicode in docstrings — intentional Polish text
    "RUF003", # ambiguous unicode in comments — intentional Polish text
    "SIM117", # merge-with-statements — readability preference
    "SIM105", # suppressible-exception — explicit try/except preferred
]

[tool.ruff.lint.isort]
known-first-party = ["zdrovena"]

# ─── Testing (pytest) ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

# ─── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["zdrovena"]
omit = [
    # Pure SMTP/REST adapters — all code paths require live external services
    # (Zoho Mail SMTP, KSeF government API, Azure Key Vault).
    # No unit-testable logic; mock tests would test the mocks, not the code.
    "zdrovena/month_closing/zoho_mail.py",
    "zdrovena/month_closing/email_service.py",
    "zdrovena/month_closing/ksef.py",
    "zdrovena/common/_keyvault.py",

    # Playwright browser automation — requires real Chromium + live sites.
    "zdrovena/month_closing/canva_downloader.py",
    "zdrovena/month_closing/fakturownia_reports.py",
    "zdrovena/audit/report_downloader.py",

    # PDF/OCR extraction — requires real PDF files + optionally Tesseract.
    # Integration-tested manually with actual invoices.
    "zdrovena/month_closing/invoice_date_check.py",

    # Azure Table Storage clients — require live Azure credentials.
    # Covered end-to-end on staging/prod; unit mocks would test the SDK, not the code.
    "zdrovena/month_closing/table_history.py",
    "zdrovena/common/shipping_store.py",

    # API startup/wiring — lifespan hooks (Azure Monitor init, KV ping),
    # middleware configuration, router mounting. No business logic here;
    # covered by integration smoke tests against running app.
    "zdrovena/api/main.py",

    # CLI entry points — thin wrappers that delegate to tested modules.
    # Covered by integration smoke tests (test_cli_smoke.py).
    "zdrovena/cli.py",
    "zdrovena/audit/commands/audit_cmd.py",
    "zdrovena/audit/commands/export.py",
    "zdrovena/audit/commands/list_cmd.py",
    "zdrovena/audit/commands/products.py",
    "zdrovena/audit/commands/report_cmd.py",
    "zdrovena/audit/commands/summary.py",
    "zdrovena/month_closing/commands/setup_cmd.py",

    # CLI bootstrap for the Allegro Container App Job cron — delegates to poll_orders_once()
    # (tested at 86%). All code paths require live Key Vault + Allegro + Azure Storage credentials.
    "zdrovena/api/commands/allegro_poll_cmd.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]


[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "pip-audit>=2.7.0",
]
